# actix-surrealdb_login_site

./: Cargo.toml  README.md
WWW/: 404.html  index.html  login.html  register.html  restricted.html
src/: db.rs  load.rs  main.rs
