[package]
name = "auth-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
cookie = "0.16"
serde = { version = "1.0", features = ["derive"] } 
serde_json="1.0"
lazy_static = "1.4.0"
surreal-simple-client = "0.2.0"
tokio = "^1"
once_cell = "1.17.1"
